fixed history profile photo not aligned

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -17,3 +17,13 @@
 .timeline .timeline-item {
   padding-bottom:1em;
 }
+
+.timeline-content .content {
+  display: flex;
+}
+
+.content-avatar {
+  margin-right: 10px;
+  width: 64px;
+  height: 64px;
+}
